# ferromail

./: .gitlab-ci.yml  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  system-prompt-fragment.md
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_email_address.rs  fuzz_filename.rs  fuzz_imap_response.rs  fuzz_mime.rs  fuzz_sandbox.rs
src/: account.rs  audit.rs  config.rs  credential.rs  email_auth.rs  gate.rs  lib.rs  login_gate.rs  main.rs  metrics.rs  mime_parse.rs  mta_sts.rs  oauth.rs  os_sandbox.rs  policy.rs  rate_limit.rs  sandbox.rs  smtp.rs  tls.rs  types.rs
src/imap/: client.rs  fetch.rs  mod.rs  validate.rs
src/sanitize/: body.rs  filename.rs  header.rs  isolation.rs  mod.rs  outbound.rs  spoof.rs
src/tools/: destructive.rs  mod.rs  read.rs  write.rs
src/transport/: http.rs  stdio.rs
systemd/: ferromail.service
tests/: adversarial_mime_bombs.rs  adversarial_path_traversal.rs  adversarial_prompt_injection.rs  adversarial_smtp_injection.rs  integration_http_transport.rs  integration_imap_mock.rs  integration_webhook.rs
