[package]
name = "ferromail"
version = "0.1.0"
edition = "2024"

[package.metadata.auditable]
# `cargo auditable build --release` embeds the full dep graph into the binary
# so `cargo audit bin target/release/ferromail` can report on it post-build.
enabled = true

[dependencies]
ammonia = "4"
age = { version = "0.11", features = ["cli-common"] }
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
futures = "0.3"
async-native-tls = { version = "0.5", default-features = false, features = ["runtime-tokio"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
encoding_rs = "0.8"
html2text = "0.14"
keyring = { version = "3", features = ["sync-secret-service"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
mail-parser = "0.9"
rand = "0.9"
rpassword = "7"
# rustls 0.23 defaults to the aws-lc-rs provider, which in 1.12+ supports the
# X25519MLKEM768 hybrid key exchange for post-quantum TLS. Enable TLS 1.3
# explicitly so we don't fall through to 1.2-only by mistake.
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "tls12", "std", "logging"] }
rustls-pemfile = "2"
rustls-platform-verifier = "0.5"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "io-std", "fs", "signal", "sync"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs", "tls12", "logging"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4"] }
zeroize = { version = "1", features = ["derive"] }
libc = "0.2.185"
imap-proto = "0.16.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "tower-log", "macros"] }
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
async-stream = "0.3"
bytes = "1.11.1"
rfc2047-decoder = "1.1.0"
# Inbound DKIM/SPF/DMARC/ARC verification.
mail-auth = { version = "0.7", default-features = false, features = ["ring", "rust-crypto"] }
# OAuth 2.0 device-code + token-refresh flows for Gmail / Microsoft.
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
# IDN / Unicode security: homograph detection on From-header domains.
idna = "1"
unicode-security = "0.1"
# Cedar policy engine for the tool-call policy layer.
cedar-policy = "4"
# Metrics.
prometheus = { version = "0.13", default-features = false }
base64 = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
# In-process syscall filter + filesystem sandbox.
landlock = "0.4"
seccompiler = "0.5"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
rcgen = "0.14"
wiremock = "0.6"
serial_test = "3"
